<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/login_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/login_side_padding"
        android:paddingRight="@dimen/login_side_padding"
        android:paddingTop="@dimen/login_top_padding"
        android:paddingBottom="@dimen/login_top_padding"
        android:clipToPadding="false"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/textColorPrimaryInverse"
                    android:textSize="45sp" />

                <ViewFlipper
                    android:id="@+id/view_flipper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".ui.login.LoginActivity">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/login_email_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:textColorHint="@color/textColorDisabledInverse"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/login_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:imeOptions="actionNext"
                                android:textColor="@color/textColorPrimaryInverse" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/login_password_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:textColorHint="@color/textColorDisabledInverse"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/login_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:imeOptions="actionDone"
                                android:textColor="@color/textColorPrimaryInverse" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/login_switch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:checked="true"
                            android:text="@string/login_checkbox"
                            android:textColor="@color/textColorPrimaryInverse" />

                        <Button
                            android:id="@+id/login_button"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/action_sign_in"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <com.pnikosis.materialishprogress.ProgressWheel
                        android:id="@+id/login_progress"
                        android:layout_width="@dimen/progress_wheel_size"
                        android:layout_height="@dimen/progress_wheel_size"
                        android:layout_gravity="center"
                        app:matProg_barColor="@color/colorPrimary"
                        app:matProg_progressIndeterminate="true" />

                </ViewFlipper>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</FrameLayout>
